[metadata]
name = tester_flask
version = 1.2
author = Vitaly Bogomolov
author_email = mail@vitaly-bogomolov.ru
description = Class for autotests flask python apps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vb64/test.helper.flask
project_urls =
    Bug Tracker = https://github.com/vb64/test.helper.flask/issues
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = tester_flask
